WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26660
Chrome: Rotated complex text (Hindi) isn't vertically aligned properly
https://bugs.webkit.org/show_bug.cgi?id=26660
Summary
Chrome: Rotated complex text (Hindi) isn't vertically aligned properly
Jungshik Shin
Reported
2009-06-23 14:10:37 PDT
When webkit-transform:rotate is applied, the vertical alignment of complex text is wrong. It's
http://crbug.com/9065
One line patch coming up
Attachments
patch
(97.52 KB, patch)
2009-08-14 11:24 PDT
,
Jungshik Shin
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
Updated Windows Results
(3.49 KB, patch)
2009-09-15 16:55 PDT
,
Brian Weinstein
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jungshik Shin
Comment 1
2009-08-14 11:24:50 PDT
Created
attachment 34863
[details]
patch I have yet to generate Windows test results.
Jungshik Shin
Comment 2
2009-08-25 14:56:50 PDT
Comment on
attachment 34863
[details]
patch Somehow my attempt to build Webkit on Windows keeps failing (I'll figure it out). In the meantime, if it's ok to check this in without expected results on Windows, I'd like get this reviewed and land it.
Eric Seidel (no email)
Comment 3
2009-09-01 00:37:14 PDT
Comment on
attachment 34863
[details]
patch Gonna trust you on this one. cq- because you'll have to pull the windows results off the windows bot after landing and land them in a second commit.
Adam Barth
Comment 4
2009-09-06 21:52:07 PDT
Unassigning from Jungshik because he's not a committer according to
http://trac.webkit.org/wiki/WebKit%20Team
Eric Seidel (no email)
Comment 5
2009-09-08 06:05:46 PDT
According to my email logs, Jungshik told me he mailed his committer paperwork to Apple on May 26th. So I expect he is a committer by now. He does need to add his name to the wiki and
http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py
however.
Brian Weinstein
Comment 6
2009-09-15 16:30:40 PDT
Is this supposed to have Windows specific results? It has been failing since it has been committed.
Brett Wilson (Google)
Comment 7
2009-09-15 16:43:02 PDT
I think so. Jungshik, can you grab (or talk to somebody to get) Safari Window results checked in?
Brian Weinstein
Comment 8
2009-09-15 16:44:04 PDT
I can take care of them, I just wasn't sure why they were necessary, but if it's agreed they are, I can get them up there in a couple minutes.
Brian Weinstein
Comment 9
2009-09-15 16:55:29 PDT
Created
attachment 39623
[details]
Updated Windows Results
Darin Adler
Comment 10
2009-09-15 17:00:10 PDT
Why does the title of this say "Chrome"? Does this not affect other WebKit browsers?
Eric Seidel (no email)
Comment 11
2009-09-18 11:52:33 PDT
Comment on
attachment 39623
[details]
Updated Windows Results Rubber-stamp = me. Doesn't this need a .png expected file too?
Brian Weinstein
Comment 12
2009-09-18 11:53:40 PDT
Windows results have been landed. I don't know how to get a png, because we don't do pixel tests on Windows (maybe Chromium does).
Eric Seidel (no email)
Comment 13
2009-09-18 11:56:30 PDT
I could have sworn we had pixel results on windows, no? Also, can we close this bug then if the results are landed? Or is there more work to do here? And yes, Chromium has pixel results for all platforms to my knowledge.
Brian Weinstein
Comment 14
2009-09-18 11:57:48 PDT
From the WebKit end we can close this bug. I'm not sure about the Chromium side though, but this is already filed in crbug.com, so, I'll just close it here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug