2009-09-15  Jungshik Shin  <jshin@chromium.org>

Reviewed by Eric Seidel

        http://bugs.webkit.org/show_bug.cgi?id=26660

        Chromium Windows: When rotated, the baseline for a span of complex
        script is completely misaligned with that of the adjacent
        simple script text. It's fixed by not applying the baseline offset for
        the Skia code path.

        Test: transforms/2d/hindi-rotated.html

        * platform/graphics/chromium/UniscribeHelper.cpp:
        (WebCore::UniscribeHelper::draw):

2009-09-15  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Eric Seidel

        http://bugs.webkit.org/show_bug.cgi?id=26660

        Chromium Windows: When rotated, the baseline for a span of complex
        script is completely misaligned with that of the adjacent simple
        script text.

        * transforms/2d/hindi-rotated.html: Added.
        * platform/mac/transforms/2d/hindi-rotated-expected.checksum: Added.
        * platform/mac/transforms/2d/hindi-rotated-expected.png: Added.
        * platform/mac/transforms/2d/hindi-rotated-expected.txt: Added.
        * platform/win/transforms: Added.
        * platform/win/transforms/2d: Added.
        * platform/win/transforms/2d/hindi-rotated-expected.checksum: Added.
        * platform/win/transforms/2d/hindi-rotated-expected.png: Added.
        * platform/win/transforms/2d/hindi-rotated-expected.txt: Added.


Canonical link: https://commits.webkit.org/39962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48397 268f45cc-cd09-0410-ab3c-d52691b4dbfc